# chess-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  [coc-explorer]-1  build.sh  chess-engine.test[1]_include.cmake  compile_commands.json  launch.sh  neovim.json  runtest.sh
.cache/clangd/index/: Board.cpp.D0F3E63B38835454.idx  BoardState.h.5540CB42D2350AE2.idx  EastSlidingLookUpTable.cpp.4F376A6419124386.idx  EastSlidingLookUpTable.hpp.7ED7EC61ACE54CD7.idx  KingLookUpTable.cpp.998C08EE06E262EC.idx  KingLookUpTable.h.A3C7BB9EFB5239A0.idx  KnightLookUpTable.cpp.9919DCBEBFE00F37.idx  KnightLookUpTable.h.B21ED54A384FC797.idx  NorthEastSlidingLookUpTable.cpp.B9329E390A455599.idx  NorthEastSlidingLookUpTable.hpp.72131B2BA16DC2B1.idx  NorthSlidingLookUpTable.cpp.AB9C61170BF59EAF.idx  NorthWestSlidingLookUpTable.cpp.6DB58D03685EA784.idx  NorthWestSlidingLookUpTable.hpp.8515C33201E8DA1B.idx  SouthEastSlidingLookUpTable.cpp.248F735D63615938.idx  SouthEastSlidingLookUpTable.hpp.FD64B7B4C61E0978.idx  SouthSlidingLookUpTable.cpp.8D09D27CD27EB2FC.idx  SouthSlidingLookUpTable.hpp.7CF2615FC62D00C3.idx  SouthWestSlidingLookUpTable.cpp.EF9EBAB3484F8304.idx  (+13 more)
.ccls-cache/@@home@karl@Development@chess-engine/: @include@c++@12.2.0@backward@auto_ptr.h.blob  @include@c++@12.2.0@backward@binders.h.blob  @include@c++@12.2.0@bit.blob  @include@c++@12.2.0@bits@align.h.blob  @include@c++@12.2.0@bits@alloc_traits.h.blob  @include@c++@12.2.0@bits@allocated_ptr.h.blob  @include@c++@12.2.0@bits@allocator.h.blob  @include@c++@12.2.0@bits@atomic_base.h.blob  @include@c++@12.2.0@bits@atomic_lockfree_defines.h.blob  @include@c++@12.2.0@bits@atomic_wait.h.blob  @include@c++@12.2.0@bits@basic_ios.h.blob  @include@c++@12.2.0@bits@basic_ios.tcc.blob  @include@c++@12.2.0@bits@basic_string.h.blob  @include@c++@12.2.0@bits@basic_string.tcc.blob  @include@c++@12.2.0@bits@char_traits.h.blob  @include@c++@12.2.0@bits@charconv.h.blob  @include@c++@12.2.0@bits@concept_check.h.blob  @include@c++@12.2.0@bits@cpp_type_traits.h.blob  @include@c++@12.2.0@bits@cxxabi_forced.h.blob  @include@c++@12.2.0@bits@cxxabi_init_exception.h.blob  @include@c++@12.2.0@bits@exception.h.blob  @include@c++@12.2.0@bits@exception_defines.h.blob  @include@c++@12.2.0@bits@exception_ptr.h.blob  @include@c++@12.2.0@bits@functexcept.h.blob  @include@c++@12.2.0@bits@functional_hash.h.blob  @include@c++@12.2.0@bits@hash_bytes.h.blob  @include@c++@12.2.0@bits@invoke.h.blob  @include@c++@12.2.0@bits@ios_base.h.blob  @include@c++@12.2.0@bits@istream.tcc.blob  @include@c++@12.2.0@bits@iterator_concepts.h.blob  @include@c++@12.2.0@bits@locale_classes.h.blob  @include@c++@12.2.0@bits@locale_classes.tcc.blob  @include@c++@12.2.0@bits@locale_facets.h.blob  @include@c++@12.2.0@bits@locale_facets.tcc.blob  @include@c++@12.2.0@bits@localefwd.h.blob  @include@c++@12.2.0@bits@max_size_type.h.blob  @include@c++@12.2.0@bits@memoryfwd.h.blob  @include@c++@12.2.0@bits@move.h.blob  @include@c++@12.2.0@bits@nested_exception.h.blob  @include@c++@12.2.0@bits@new_allocator.h.blob  (+398 more)
.ccls-cache/@home@karl@Development@chess-engine/: src@Board.cpp.blob  src@Board.h  src@Board.h.blob  src@BoardState.h  src@BoardState.h.blob  src@EastSlidingLookUpTable.cpp.blob  src@EastSlidingLookUpTable.hpp  src@EastSlidingLookUpTable.hpp.blob  src@KingLookUpTable.cpp  src@KingLookUpTable.cpp.blob  src@KingLookUpTable.h  src@KingLookUpTable.h.blob  src@KnightLookUpTable.cpp.blob  src@KnightLookUpTable.h  src@KnightLookUpTable.h.blob  src@NorthEastSlidingLookUpTable.cpp.blob  src@NorthEastSlidingLookUpTable.hpp.blob  src@NorthSlidingLookUpTable.cpp.blob  src@NorthSlidingLookUpTable.hpp  src@NorthSlidingLookUpTable.hpp.blob  src@NorthWestSlidingLookUpTable.cpp.blob  src@NorthWestSlidingLookUpTable.hpp.blob  src@SouthEastSlidingLookUpTable.cpp.blob  src@SouthEastSlidingLookUpTable.hpp.blob  src@SouthSlidingLookUpTable.cpp  src@SouthSlidingLookUpTable.cpp.blob  src@SouthSlidingLookUpTable.hpp  src@SouthSlidingLookUpTable.hpp.blob  src@SouthWestSlidingLookUpTable.cpp  src@SouthWestSlidingLookUpTable.cpp.blob  src@SouthWestSlidingLookUpTable.hpp.blob  src@WestSlidingLookUpTable.cpp  src@WestSlidingLookUpTable.cpp.blob  src@WestSlidingLookUpTable.hpp.blob  src@bitmap.cpp  src@bitmap.cpp.blob  src@bitmap.h.blob  src@color.h  src@color.h.blob  src@fen.cpp  (+15 more)
src/: Board.cpp  Board.h  BoardCompiletimeState.h  BoardState.h  ChessPosition.cpp  ChessPosition.h  DSlidingLookUpTable.cpp  DSlidingLookUpTable.h  EastSlidingLookUpTable.cpp  GameState.h  H1SlidingLookUpTable.cpp  H1SlidingLookUpTable.hpp  H2SlidingLookUpTable.cpp  H2SlidingLookUpTable.hpp  H3SlidingLookUpTable.cpp  H3SlidingLookUpTable.hpp  H4SlidingLookUpTable.cpp  H4SlidingLookUpTable.hpp  HVSlidingLookUpTable.cpp  HVSlidingLookUpTable.h  KingLookUpTable.cpp  KingLookUpTable.h  KnightLookUpTable.cpp  KnightLookUpTable.h  MagicLookup.h  MoveAccumulator.h  MoveBitmapAccumulator.h  MoveCounter.h  Movestack.h  NorthEastSlidingLookUpTable.cpp  NorthEastSlidingLookUpTable.h  NorthSlidingLookUpTable.cpp  NorthWestSlidingLookUpTable.cpp  NorthWestSlidingLookUpTable.h  PerfTRecurser.h  PvPConsole.cpp  PvPConsole.h  RuntimeMoveCollector.h  SouthEastSlidingLookUpTable.cpp  SouthEastSlidingLookUpTable.h  (+49 more)
test/: CMakeLists.txt  MoveTestReceiver.h  banmaskgen_bishop.cpp  banmaskgen_king.cpp  banmaskgen_knight.cpp  banmaskgen_pawn.cpp  banmaskgen_queen.cpp  banmaskgen_rook.cpp  checkmaskgen_bishop.cpp  checkmaskgen_knight.cpp  checkmaskgen_pawn.cpp  checkmaskgen_queen.cpp  checkmaskgen_rook.cpp  movegen_bishop_basic.cpp  movegen_bishop_checkmask.cpp  movegen_bishop_pinmask.cpp  movegen_common_basic.cpp  movegen_king_banmask.cpp  movegen_king_basic.cpp  movegen_knight_basic.cpp  movegen_knight_checkmask.cpp  movegen_knight_pinmask.cpp  movegen_pawn_basic.cpp  movegen_pawn_checkmask.cpp  movegen_queen_basic.cpp  movegen_queen_checkmask.cpp  movegen_rook_basic.cpp  movegen_rook_checkmask.cpp  movegen_rook_pinmask.cpp  movegen_test.cpp  pinmaskgen_bishop.cpp  pinmaskgen_queen.cpp  pinmaskgen_rook.cpp  test_utils.h
test/src/: movegen_test.cpp
